# privacy-contract-vm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  build.sh  gen_develop.sh  install_deps.sh  install_deps_remote.sh  install_deps_remote2.sh  libcopy.bat  libcopy.sh  libpublish.bat  libpublish.sh
cmake/: README.md  config.cmake  func.cmake
src/mpc-vm-common/: CMakeLists.txt  README.md
src/mpc-vm-common/include/: mpc.h  mpc_common.h  mpc_define.h  mpc_ns_define.h
src/mpc-vm-common/test/: testInputParser.cpp
src/mpc-vm-common/utils/: base64.h  command_parameters.cpp  command_parameters.h  logger_file.cpp  logger_file.h  mpc_buffer.h  parse_input_data.cpp  parse_input_data.h  platon_logger.cpp  platon_logger.h  rsa.h  safemap.h  safequeue.h  semaphore.h  simple_timer.h  ssl.h  sys_utils_tool.cpp  sys_utils_tool.h  type_utils.cpp  type_utils.h  utils.cpp  utils.h  utils2.cpp  utils2.h
src/mpc-vm-core/: CMakeLists.txt  README.md  make.sh  makebatchso.sh
src/mpc-vm-core/emp-ot/: miracl_np_ot.cpp  miracl_np_ot.h  np_ot.h  ot_base.h  ot_extension.cpp  ot_extension.h  relic_np_ot.cpp  relic_np_ot.h  sh_ot_extension.cpp  sh_ot_extension.h
src/mpc-vm-core/emp-sh2pc/: semihonest.h  semihonest_eva.h  semihonest_gen.h
src/mpc-vm-core/emp-tool/circuits/: batcher.h  bit.cpp  circuit_file.h  float_circuit.h  float_circuit.hpp  integer.cpp  integer_utils.cpp  integer_utils.h  number.h
src/mpc-vm-core/emp-tool/execution/: circuit_execution.h  emp-tool.cpp  plain_circ.h  plain_prot.cpp  plain_prot.h  protocol_execution.h
src/mpc-vm-core/emp-tool/garble/: aes.h  emp_aes.h  emp_aes.h.orig  garble_gate_halfgates.h  garble_gate_privacy_free.h  platon_aes.cpp  platon_aes.h
src/mpc-vm-core/emp-tool/gc/: halfgate_eva.h  halfgate_gen.h
src/mpc-vm-core/emp-tool/io/: abandon_io_channel.h  check_io_channel.h  file_io_channel.h  hash_io_channel.h  io_channel.cpp  mem_io_channel.h  net_io_channel.cpp  net_io_channel.h
src/mpc-vm-core/emp-tool/mpc/: mpc_bit.cpp  mpc_bit.h  mpc_integer.cpp  mpc_integer.h
src/mpc-vm-core/emp-tool/utils/: block_utils.cpp  block_utils.h  ccrh.h  com.cpp  com.h  crh.h  hash.h  kdf.cpp  kdf.h  mir_util.cpp  mir_util.h  miracl_hash.cpp  miracl_hash.h  prg.cpp  prg.h  prp.cpp  prp.h  relic_ec_utils.cpp  relic_ec_utils.h  relic_hash.cpp  relic_hash.h  sm2_params.cpp  sm2_params.h  sse.cpp  sse.h  sys_utils.cpp  sys_utils.h  tccrh.h  utils.cpp  utils.h  xor_tree.h
src/mpc-vm-core/include/: io_channel.h
src/mpc-vm-platon-sdk/: CMakeLists.txt  README.md
src/mpc-vm-platon-sdk/sdk/: platonvmsdk.cpp  platonvmsdk.h
src/mpc-vm-platon-sdk/sdk-demo/: platonvmsdk.cpp
src/mpc-vm-platon-sdk/test/: platonvmsdk_main.cpp
src/mpc-vm-sdk/: CMakeLists.txt  README.md
src/mpc-vm-sdk/cb/: mpc_task_callback_impl.cpp  mpc_task_callback_impl.h  mpc_transaction_callback_impl.cpp  mpc_transaction_callback_impl.h
src/mpc-vm-sdk/client/: mpc_client.cpp  mpc_client.h  mpc_sdk_client.h
src/mpc-vm-sdk/main/: main.cpp
src/mpc-vm-service/: CMakeLists.txt  README.md
src/mpc-vm-service/callback/: mpc_node_callback_impl.cpp  mpc_node_callback_impl.h
src/mpc-vm-service/client/: mpc_communicator.cpp  mpc_communicator.h  mpc_directnode_client.cpp  mpc_directnode_client.h  mpc_directnode_communicator.cpp  mpc_directnode_communicator.h  mpc_node_client.cpp  mpc_node_client.h  mpc_node_client_factory.cpp  mpc_node_client_factory.h
src/mpc-vm-service/core/: mpc_engine.cpp  mpc_engine.h  vm_client.cpp  vm_client.h
src/mpc-vm-service/include/: mpc_vm_service.h  mpc_vm_service_define.h
src/mpc-vm-service/io/: communicator_io_channel.cpp  communicator_io_channel.h
src/mpc-vm-service/jrpc/: abi.cpp  abi.h  abstractstubserver.h  build.bat  build.sh  eth_trans.h  gen_simulator.sh  platon.json  platon_client.cpp  platon_client.h  platon_server.cpp  platon_server.h  stubclient.h
src/mpc-vm-service/proto/: build.bat  demo.proto  mpctype.proto
src/mpc-vm-service/proto/prx/proto/demo/: Demo.java
src/mpc-vm-service/server/: mpc_node_channel_session_impl.cpp  mpc_node_channel_session_impl.h  mpc_node_servant.cpp  mpc_node_servant.h  mpc_task_session_impl.cpp  mpc_task_session_impl.h
src/mpc-vm-service/slice/: build.bat  build.sh  cfg.client2.config  platon_mpc_service.cpp  platon_mpc_service.h  platon_mpc_service.ice
src/mpc-vm-service/task/: mpc_p2p_task_ready_processor.cpp  mpc_p2p_task_ready_processor.h  mpc_put_ready_monitor.cpp  mpc_put_ready_monitor.h  mpc_task.cpp  mpc_task.h  mpc_task_dispatcher.cpp  mpc_task_dispatcher.h  mpc_task_processor.cpp  mpc_task_processor.h
src/mpc-vm-service/test/: millionaire.cpp
test/mpc-platon-sdk/: CMakeLists.txt
test/mpc-vm-common/: CMakeLists.txt
test/mpc-vm-common/unittest/: base64.cpp  rsa.cpp  safequeue.cpp  ssl.cpp  utils2.cpp
test/mpc-vm-core/: CMakeLists.txt
test/mpc-vm-core/exp/: circuit_file.cpp  com.cpp  float.cpp  gen_circuit.cpp  ideal.cpp  mot.cpp  netio.cpp  prg.cpp  print_precomputation_table.cpp
test/mpc-vm-core/samples/: Samples.cpp  SimpleProto1.cpp  int2.cpp  millionaire.cpp
test/mpc-vm-core/systest/: bit.cpp  example.cpp  float.cpp  int.cpp  simple.cpp
test/mpc-vm-core/test/: Test.h  TestBasicType.cpp  TestPerf.cpp  TestProto.cpp
test/mpc-vm-core/unittest/: bit.cpp  garble.cpp  int.cpp  netio.cpp  pbutils.cpp  prp.cpp  readme.txt  shot.cpp  test.h
test/mpc-vm-sdk/: CMakeLists.txt
test/mpc-vm-service/: CMakeLists.txt
third-code/eth-simplest/: CMakeLists.txt  Guards.h
third-code/eth-simplest/examples/: demo1.cpp
third-code/eth-simplest/libdevcore/: Common.h  Function.cpp  Function.h  SHA3.cpp  SHA3.h
third-code/eth-simplest/libdevcrypto/: Common.cpp  CryptoPP.cpp
third-code/miracl/: CMakeLists.txt
third-code/miracl/include/: mirdef.h
third-code/miracl/source/: Makefile  Makefile.inc  mrflsh1.c  mrmuldv.c
third-code/miracl/source-used/: Makefile  mr87v.c  mrmuldv.c
tools/gencode/: CMakeLists.txt  IR_Java.tpl  IR_JavaPrx.tpl  README.md
tools/gencode/samples/: NoPkg.cpp  NoPkg.java  NoPkg.proto
tools/gencode/src/: gencode.cpp  gencode.h  gencode_main.cpp
(+111 files in other folders)
